Change confirmation of payment to in game modal not alert

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,16 @@
         </div>
     </div>
 
+    <!-- PURCHASE CONFIRMATION MODAL -->
+    <div class="overlay" id="purchase-overlay">
+        <div class="modal">
+            <h2>Purchase Lives</h2>
+            <p class="modal-text" id="purchase-message">You would purchase 1 life here!</p>
+            <p class="modal-subtext">[Placeholder - no real payment]</p>
+            <button class="btn btn-primary" id="purchase-ok">OK</button>
+        </div>
+    </div>
+
     <!-- GAME OVER SCREEN -->
     <div class="screen gameover-screen" id="gameover-screen">
         <h2>Game Over!</h2>
