--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>Powers of Pig</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer data-domain="powersofpig.com" src="https://va.vercel-scripts.com/v1/script.js"></script>
 </head>
 <body>
     <!-- HOME SCREEN -->
