add feedback modal and database and fix scrolling in collections

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,19 @@
         </div>
     </div>
 
+    <!-- FEEDBACK MODAL -->
+    <div class="overlay" id="feedback-overlay">
+        <div class="modal feedback-modal">
+            <button class="feedback-close" id="feedback-close">&times;</button>
+            <h2>Rate your game</h2>
+            <div class="feedback-buttons" id="feedback-buttons">
+                <button class="feedback-btn" id="feedback-up" data-rating="up">👍</button>
+                <button class="feedback-btn" id="feedback-down" data-rating="down">👎</button>
+            </div>
+            <div class="feedback-thanks" id="feedback-thanks" style="display: none;">Thanks!</div>
+        </div>
+    </div>
+
     <!-- GAME OVER SCREEN -->
     <div class="screen gameover-screen" id="gameover-screen">
         <h2>Game Over!</h2>
