refactor game UI to use string constants for improved maintainability and localization

--- a/src/index.html
+++ b/src/index.html
@@ -191,6 +191,7 @@
         <button class="btn btn-secondary" id="nolives-home-button">Home</button>
     </div>
 
+    <script src="strings.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
