--- a/src/index.html
+++ b/src/index.html
@@ -12,37 +12,40 @@
 <body>
     <!-- PASSWORD GATE SCREEN -->
     <div class="screen gate-screen" id="gate-screen">
+        <button class="lang-toggle" aria-label="Toggle language">EN</button>
         <div class="gate-pig">🐷</div>
-        <h1 class="gate-title">Enter the Sty</h1>
+        <h1 class="gate-title" data-i18n="gate.title">Enter the Sty</h1>
         <form class="gate-form" id="gate-form">
             <input
                 type="password"
                 class="gate-input"
                 id="gate-password"
+                data-i18n-placeholder="gate.placeholder"
                 placeholder="Password"
                 autocomplete="off"
                 autocapitalize="off"
                 autocorrect="off"
                 spellcheck="false"
             >
-            <button type="submit" class="btn btn-primary gate-btn">Enter</button>
+            <button type="submit" class="btn btn-primary gate-btn" data-i18n="gate.button">Enter</button>
         </form>
         <p class="gate-error" id="gate-error"></p>
     </div>
 
     <!-- HOME SCREEN -->
     <div class="screen home-screen" id="home-screen">
-        <h1 class="home-title">Powers of Pig</h1>
+        <button class="lang-toggle" aria-label="Toggle language">EN</button>
+        <h1 class="home-title" data-i18n="home.title">Powers of Pig</h1>
         <div class="lives-display" id="home-lives">
             <span class="life-icon">🐷</span>
             <span class="life-icon">🐷</span>
             <span class="life-icon">🐷</span>
         </div>
         <div class="home-pig">🐷</div>
-        <button class="btn btn-primary" id="play-button">Play</button>
-        <button class="btn btn-secondary" id="collection-button">Collection</button>
+        <button class="btn btn-primary" id="play-button" data-i18n="home.play">Play</button>
+        <button class="btn btn-secondary" id="collection-button" data-i18n="home.collection">Collection</button>
         <div class="high-score-display">
-            <span>High Score:</span>
+            <span data-i18n="home.highScore">High Score:</span>
             <span id="high-score">0</span>
         </div>
     </div>
@@ -52,13 +55,14 @@
         <header class="game-header">
             <button class="icon-btn" id="home-button" title="Home">🏠</button>
             <div class="score-container">
-                <div class="score-label">Score</div>
+                <div class="score-label" data-i18n="game.score">Score</div>
                 <div class="score-value" id="score">0</div>
             </div>
             <div class="header-buttons">
                 <button class="icon-btn" id="undo-button" title="Undo">↩️</button>
                 <button class="icon-btn" id="sound-button" title="Sound">🔊</button>
                 <button class="icon-btn" id="pause-button" title="Pause">⏸️</button>
+                <button class="lang-toggle lang-toggle-header" aria-label="Toggle language">EN</button>
             </div>
         </header>
 
@@ -67,28 +71,29 @@
             <div class="tile-container" id="tile-container"></div>
         </div>
 
-        <p class="instructions">Swipe or use arrow keys to move tiles</p>
-        <a class="feedback-link" id="feedback-link">Give Feedback</a>
+        <p class="instructions" data-i18n="game.instructions">Swipe or use arrow keys to move tiles</p>
+        <a class="feedback-link" id="feedback-link" data-i18n="game.giveFeedback">Give Feedback</a>
     </div>
 
     <!-- PAUSE MENU (overlay) -->
     <div class="overlay" id="pause-overlay">
         <div class="modal">
-            <h2>Paused</h2>
-            <button class="btn btn-primary" id="resume-button">Resume</button>
-            <button class="btn btn-secondary" id="restart-button">Restart</button>
-            <button class="btn btn-secondary" id="pause-home-button">Home</button>
+            <button class="lang-toggle lang-toggle-modal" aria-label="Toggle language">EN</button>
+            <h2 data-i18n="pause.title">Paused</h2>
+            <button class="btn btn-primary" id="resume-button" data-i18n="pause.resume">Resume</button>
+            <button class="btn btn-secondary" id="restart-button" data-i18n="pause.restart">Restart</button>
+            <button class="btn btn-secondary" id="pause-home-button" data-i18n="pause.home">Home</button>
         </div>
     </div>
 
     <!-- RESTART CONFIRMATION MODAL -->
     <div class="overlay" id="restart-overlay">
         <div class="modal">
-            <h2>Start Over?</h2>
-            <p class="modal-text">This will cost 1 life.</p>
+            <h2 data-i18n="restart.title">Start Over?</h2>
+            <p class="modal-text" data-i18n="restart.message">This will cost 1 life.</p>
             <div class="modal-buttons">
-                <button class="btn btn-secondary" id="restart-cancel">Cancel</button>
-                <button class="btn btn-danger" id="restart-confirm">Confirm</button>
+                <button class="btn btn-secondary" id="restart-cancel" data-i18n="restart.cancel">Cancel</button>
+                <button class="btn btn-danger" id="restart-confirm" data-i18n="restart.confirm">Confirm</button>
             </div>
         </div>
     </div>
@@ -96,10 +101,10 @@
     <!-- PURCHASE CONFIRMATION MODAL -->
     <div class="overlay" id="purchase-overlay">
         <div class="modal">
-            <h2>Purchase Lives</h2>
+            <h2 data-i18n="purchase.title">Purchase Lives</h2>
             <p class="modal-text" id="purchase-message">You would purchase 1 life here!</p>
-            <p class="modal-subtext">[Placeholder - no real payment]</p>
-            <button class="btn btn-primary" id="purchase-ok">OK</button>
+            <p class="modal-subtext" data-i18n="purchase.placeholder">[Placeholder - no real payment]</p>
+            <button class="btn btn-primary" id="purchase-ok" data-i18n="purchase.ok">OK</button>
         </div>
     </div>
 
@@ -107,12 +112,12 @@
     <div class="overlay" id="feedback-overlay">
         <div class="modal feedback-modal">
             <button class="feedback-close" id="feedback-close">&times;</button>
-            <h2>Rate your game</h2>
+            <h2 data-i18n="feedback.rateTitle">Rate your game</h2>
             <div class="feedback-buttons" id="feedback-buttons">
                 <button class="feedback-btn" id="feedback-up" data-rating="up">👍</button>
                 <button class="feedback-btn" id="feedback-down" data-rating="down">👎</button>
             </div>
-            <div class="feedback-thanks" id="feedback-thanks" style="display: none;">Thanks!</div>
+            <div class="feedback-thanks" id="feedback-thanks" style="display: none;" data-i18n="feedback.thanks">Thanks!</div>
         </div>
     </div>
 
@@ -120,75 +125,81 @@
     <div class="overlay" id="comment-feedback-overlay">
         <div class="modal feedback-modal">
             <button class="feedback-close" id="comment-feedback-close">&times;</button>
-            <h2>What did you think of the game?</h2>
+            <h2 data-i18n="feedback.commentTitle">What did you think of the game?</h2>
             <textarea
                 class="feedback-textarea"
                 id="feedback-textarea"
                 maxlength="3000"
             ></textarea>
-            <button class="btn btn-primary feedback-submit" id="feedback-submit" disabled>Submit</button>
-            <div class="feedback-thanks" id="comment-feedback-thanks" style="display: none;">Thanks!</div>
+            <button class="btn btn-primary feedback-submit" id="feedback-submit" disabled data-i18n="feedback.submit">Submit</button>
+            <div class="feedback-thanks" id="comment-feedback-thanks" style="display: none;" data-i18n="feedback.thanks">Thanks!</div>
         </div>
     </div>
 
     <!-- GAME OVER SCREEN -->
     <div class="screen gameover-screen" id="gameover-screen">
-        <h2>Game Over!</h2>
+        <button class="lang-toggle" aria-label="Toggle language">EN</button>
+        <h2 data-i18n="gameOver.title">Game Over!</h2>
         <div class="final-score">
-            <span>Score:</span>
+            <span data-i18n="gameOver.score">Score:</span>
             <span id="final-score">0</span>
         </div>
         <div class="highest-pig">
-            <span>Highest pig:</span>
+            <span data-i18n="gameOver.highestPig">Highest pig:</span>
             <div class="pig-badge" id="highest-pig-badge"></div>
         </div>
         <div class="new-pig-unlocked" id="new-pig-message" style="display: none;">
-            <p>New pig discovered!</p>
+            <p data-i18n="gameOver.newPig">New pig discovered!</p>
             <div class="pig-badge" id="new-pig-badge"></div>
         </div>
-        <button class="btn btn-primary" id="play-again-button">Play Again</button>
-        <button class="btn btn-secondary" id="gameover-home-button">Home</button>
+        <button class="btn btn-primary" id="play-again-button" data-i18n="gameOver.playAgain">Play Again</button>
+        <button class="btn btn-secondary" id="gameover-home-button" data-i18n="gameOver.home">Home</button>
     </div>
 
     <!-- WIN SCREEN -->
     <div class="screen win-screen" id="win-screen">
-        <h2>🎉 Congratulations! 🎉</h2>
-        <p class="win-message">You've created</p>
-        <div class="lion-pig-badge">THE LION PIG</div>
-        <p class="win-submessage">🐷🦁</p>
-        <button class="btn btn-primary" id="continue-button">Continue Playing</button>
-        <button class="btn btn-secondary" id="new-game-button">New Game</button>
+        <button class="lang-toggle" aria-label="Toggle language">EN</button>
+        <h2 data-i18n="win.title">🎉 Congratulations! 🎉</h2>
+        <p class="win-message" data-i18n="win.created">You've created</p>
+        <div class="lion-pig-badge" data-i18n="win.lionPig">THE LION PIG</div>
+        <p class="win-submessage" data-i18n="win.emoji">🐷🦁</p>
+        <button class="btn btn-primary" id="continue-button" data-i18n="win.continue">Continue Playing</button>
+        <button class="btn btn-secondary" id="new-game-button" data-i18n="win.newGame">New Game</button>
     </div>
 
     <!-- COLLECTION SCREEN (Badge Gallery) -->
     <div class="screen collection-screen" id="collection-screen">
         <header class="collection-header">
             <button class="icon-btn" id="collection-back-button">←</button>
-            <h2>Collection</h2>
-            <div class="collection-progress" id="collection-progress">0/17</div>
+            <h2 data-i18n="collection.title">Collection</h2>
+            <div class="collection-header-right">
+                <div class="collection-progress" id="collection-progress">0/17</div>
+                <button class="lang-toggle lang-toggle-header" aria-label="Toggle language">EN</button>
+            </div>
         </header>
         <div class="badge-grid" id="badge-grid"></div>
     </div>
 
     <!-- OUT OF LIVES SCREEN -->
     <div class="screen nolives-screen" id="nolives-screen">
-        <h2>Out of Oinks!</h2>
+        <button class="lang-toggle" aria-label="Toggle language">EN</button>
+        <h2 data-i18n="outOfLives.title">Out of Oinks!</h2>
         <div class="nolives-pig">😢🐷</div>
         <div class="next-life-timer">
-            <span>Next life in:</span>
+            <span data-i18n="outOfLives.nextLife">Next life in:</span>
             <span id="next-life-countdown">4:00:00</span>
         </div>
         <div class="purchase-options">
             <button class="btn btn-purchase" id="buy-one-life">
-                <span class="purchase-label">Get 1 Life</span>
-                <span class="purchase-price">£0.50</span>
+                <span class="purchase-label" data-i18n="outOfLives.get1Life">Get 1 Life</span>
+                <span class="purchase-price" data-i18n="outOfLives.price1">£0.50</span>
             </button>
             <button class="btn btn-purchase" id="buy-three-lives" style="display: none;">
-                <span class="purchase-label">Get 3 Lives</span>
-                <span class="purchase-price">£1.00</span>
+                <span class="purchase-label" data-i18n="outOfLives.get3Lives">Get 3 Lives</span>
+                <span class="purchase-price" data-i18n="outOfLives.price3">£1.00</span>
             </button>
         </div>
-        <button class="btn btn-secondary" id="nolives-home-button">Home</button>
+        <button class="btn btn-secondary" id="nolives-home-button" data-i18n="outOfLives.home">Home</button>
     </div>
 
     <script src="strings.js"></script>
