implement tutorial and help system:

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,17 @@
         <div class="board-container">
             <div class="grid-background" id="grid-background"></div>
             <div class="tile-container" id="tile-container"></div>
+            <!-- Tutorial Arrow -->
+            <div class="tutorial-arrow" id="tutorial-arrow"></div>
+            <!-- First Merge Celebration -->
+            <div class="confetti-container" id="confetti-container"></div>
+            <div class="merge-text" id="merge-text"></div>
+            <!-- Hint Arrow (Stuck? system) -->
+            <div class="hint-arrow" id="hint-arrow"></div>
         </div>
+
+        <!-- Tutorial Text -->
+        <div class="tutorial-text" id="tutorial-text"></div>
 
         <p class="instructions" data-i18n="game.instructions">Swipe or use arrow keys to move tiles</p>
         <a class="feedback-link" id="feedback-link" data-i18n="game.giveFeedback">Give Feedback</a>
